--- a/refs.bib
+++ b/refs.bib
@@ -685,6 +685,17 @@
   publisher={American Physiological Society Bethesda, MD}
 }
 
+@article{bell2011polyamines,
+  title={A neuroprotective role for polyamines in a Xenopus tadpole model of epilepsy},
+  author={Bell, Mark R and Belarde, James A and Johnson, Hannah F and Aizenman, Carlos D},
+  journal={Nature neuroscience},
+  volume={14},
+  number={4},
+  pages={505},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
 @article{deeg2011,
   title={Sensory modality--specific homeostatic plasticity in the developing optic tectum},
   author={Deeg, Katherine E and Aizenman, Carlos D},
@@ -705,6 +716,17 @@
   pages={147--158},
   year={2011},
   publisher={Elsevier}
+}
+
+@article{lindner2011trentool,
+  title={TRENTOOL: A Matlab open source toolbox to analyse information flow in time series data with transfer entropy},
+  author={Lindner, Michael and Vicente, Raul and Priesemann, Viola and Wibral, Michael},
+  journal={BMC neuroscience},
+  volume={12},
+  number={1},
+  pages={119},
+  year={2011},
+  publisher={BioMed Central}
 }
 
 @article{liu2011cat,
@@ -748,6 +770,17 @@
   pages={89--103},
   year={2011},
   publisher={Annual Reviews}
+}
+
+@article{vicente2011te,
+  title={Transfer entropy—a model-free measure of effective connectivity for the neurosciences},
+  author={Vicente, Raul and Wibral, Michael and Lindner, Michael and Pipa, Gordon},
+  journal={Journal of computational neuroscience},
+  volume={30},
+  number={1},
+  pages={45--67},
+  year={2011},
+  publisher={Springer}
 }
 
 @article{xu2011,
