Figures and captions

--- a/main.tex
+++ b/main.tex
@@ -127,7 +127,7 @@ For all mathematical methods, we provide their names and interpretation in the m
 
 We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles apply to all analyses between younger and older animals in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a dark-on-light "Looming" stimulus, followed by a full-field dark "Flash", followed by a spatially "Scrambled" looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. We recorded high speed calcium imaging signals \citep{xu2011,truszkowski2017} from one layer of “deep” principal tectal neurons in the tectum (Fig 1B,C); extracted fluorescence traces (Fig 1D,E), and inferred instantaneous spiking rate for each neuron within every frame (Fig 1F,G).
 
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig1.pdf}
 \caption{
 Experimental design overview. \textbf{A}. Four representative frames from visual stimuli of each type. \textbf{B}. Schematic of the preparation. \textbf{C}. View of the optic tectum during the calcium imaging recording. \textbf{D}. Matching regions of interest and average responses in each cell. \textbf{E}. Typical fluorescence responses to flash (F), scramble (S) and looming (L) stimuli from three cells in the tectum. \textbf{F}. Spiking estimations for these fluorescence traces. \textbf{G}. Average full-brain responses to stimuli of every type, wich 95\% confidence interval band, for one representative experiment. }
@@ -139,7 +139,7 @@ As reported previously in electrophysiology experiments \citep{khakhalin2014}, r
 
 The total output of observed networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 2B). There was no change in this preference in development ($p_t$=0.15). There was no difference in response amplitude between looming and scrambled stimuli (average difference of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively; no difference in development $p_t=$ 0.80). These results support our prior observation that the total tectal response in tadpoles depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
 
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig2.pdf}
 \caption{
 Selectivity analysis. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
@@ -159,7 +159,7 @@ To assess the variability of responses from one tectal cell to another, we perfo
 
 % Description of heatmaps goes here - TODO
 
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig3.pdf}
 \caption{
 Responses in space in time. \textbf{A}. Two first components identified in tectal responases (sample stage 49 brain; Principal Component Analysis with promax rotation).  \textbf{B}. Cells in the tectum, colored by the contribution of first (green) and second (purple) response components. Black cross shows a reconstructed retinotopy center. \textbf{C}. Average change of Flash-Looming selectivity with distance from the retinotopy center, for stage 46 (left) and stage 49 (right) tadpoles. \textbf{D}. Activation of tecta in response to Flash, Scrambled, and Looming stimuli, averaged across all experiments. The responses are shown both in time (x-axis) and space (distance from the retinotopy center, y axis), while color shows average activation of cells at this part of the brain, in this moment during response. \textbf{E}. A difference between average responses to Looming and Scrambled stimuli: response to looming starts earlier, but does not last as long as one to scrambled.}
@@ -175,10 +175,10 @@ To better describe network activation variability, we used spectral clustering t
 
 \subsection*{Network reconstruction}
 
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig4.pdf}
 \caption{
-Spatial variability. \textbf{A}. Connectivity reconstruction for one experiment, with location of each cell preserved. \textbf{B}. Same graph, optimized for graph presentation. Position of individual nodes no longer represents the position of tectal cells. \textbf{C}. Rounded in-degree distribution for younger (green) and older (blue) tadpoles, shown in log-scale. Significant changes for individual degrees ($p_t<$ 0.05) are marked with asterisks. \textbf{D}. Same as C, but for out-degree distributions. \textbf{E}. Network power increased in development, as older tadpoles had a slightly sharper slope to their degree distributions. }
+Connectivity reconstruction.  \textbf{A}. Delayed correlations between activities of different neurons. \textbf{B}. Adjusted transfer entropy estimations. \textbf{C}. Estimated weighted adjacency matrix. \textbf{D}. Connectivity reconstruction for one experiment, with location of each cell preserved.s \textbf{E}. Same graph, optimized for graph presentation. Position of individual nodes no longer represents the position of tectal cells. \textbf{F}. In-degree distribution for younger (violet) and older (black) tadpoles, shown in log-scale. Significant changes for individual degrees ($p_t<$ 0.05) are marked with asterisks. \textbf{G}. Same as C, but for out-degree distributions. \textbf{H}. Network power increased in development, as older tadpoles had a slightly sharper slope to their degree distributions. }
 \end{figure*}
 
 The high speed of video acquisition used in this study (83 frames/s) allowed us to look not just at instantaneous correlations between activation of individual neurons, but at the propagation of signals through the network. In \textit{Xenopus} preparations, it takes about 5 ms for a presynaptic action potential to evoke neurotransmitter release in a typical tectal synapse \citep{khakhalin2012}, and about 10 ms for a typical synaptic current to depolarize postsynaptic neuron above the spiking threshold \citep{ciarleglio2015,busch2019}, which makes the frame-to-frame delay in our video recordings (12 ms) well posed to infer neuronal connections from activity.
@@ -201,10 +201,10 @@ We then looked at whether connected cells were more likely to be located spatial
 
 For each connectivity graph reconstructed from tadpole tecta, we calculated several standard network properties, and compared them across developmental stages. We also checked whether our results were statistically unusual for a network of this size, by comparing network properties of our graphs to that of matching randomized graphs \citep{ansmann2012surrogate}. To do so, we randomly rewired edges between nodes, while keeping the distribution of edge weights $w_{ji}$, and the number of non-zero edges adjacent to each node (node degree) fixed, as a generalization of degree-preserving rewiring \citep{maslov2002}. 
 
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig5.pdf}
 \caption{
-Global network properties. Network diagrams near each plot present typical topology of graphs with low and high values of respective network measure. \textbf{A}. Global network efficiency was lower than expected for younger tadpoles (see text). \textbf{B}. Network modularity increased in development. \textbf{C}. Global clustering was higher than expected by chance, for both developmental stages. \textbf{D}. Network hierarchy was higher than expected by chance, for both developimental stages. }
+Global network properties. Network diagrams to the right of each plot present sample graphs with low and high values of respective network measure. \textbf{A}. Global network efficiency was lower than expected for stage 46 tadpoles. \textbf{B}. Network modularity increased in development. \textbf{C}. Global clustering was higher than expected by chance, for both developmental stages. \textbf{D}. Network hierarchy was higher than expected by chance, for both developimental stages. }
 \end{figure*}
 
 The measure of average "connectedness" in the graph, known as \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Figure 5A). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a randomized network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively). Efficiency did not seem to change with age ($d$=$-$0.8, $p_t$=0.06).
@@ -219,17 +219,15 @@ Network \textbf{modularity} is the most commonly used measure of mesoscale netwo
 
 Even though the exact architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that the position of selective neurons within connectivity graphs would not be random \citep{timme2016degree}. To verify that, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantify its place within the network, known as measures of \textbf{centrality}.
 
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig6.pdf}
 \caption{
-Local network properties for cells selective for looming stimuli. \textbf{A}. Sells with higher Katz centrality has a very weak tendency to be selective for looming stimuli. A diagram inset illustrates the concept of Katz centrality: for this graph, cells with low centrality (sources) are pale, while cells with higher centrality (sinks) are darker. \textbf{B}. Correlation coefficients between Katz centrality of each cell and its selectivity for looming stimuli, calculated separately for each experiment, shown by developmental stage. \textbf{C}. Correlation coefficients between node in-degree and its selectivity for looming stimuli, in each experiment, shown by developmental stage. \textbf{D}. Correlation coefficients between spiking of each neuron, and its selectivity for looming stimuli, calculated for each experiment, and shown by developmental stage. }
+Local network properties for cells selective for looming stimuli. \textbf{A}. Sells with higher Katz centrality has a very weak tendency to be selective for looming stimuli. A diagram inset illustrates the concept of Katz centrality: for this graph, cells with low centrality (sources) are pale, while cells with higher centrality (sinks) are darker. \textbf{B}. Correlation coefficient between Katz centrality of each cell and its selectivity for looming stimuli, calculated for each experiment, and shown by developmental stage. \textbf{C}. Correlation coefficient between node in-degree and its selectivity for looming stimuli, in each experiment, shown by developmental stage. \textbf{D}. Correlation coefficient (Spearman) between neuronal spiking, and their selectivity for looming stimuli, calculated for each experiment, and shown by developmental stage. }
 \end{figure*}
 
 To identify information sinks, for each cell we calculated its \textbf{Katz centrality} within the graph \citep{katz1953original,fletcher2018katz}. By definition, nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph is more likely to eventually cause activation of these nodes, compared to a node with a low Katz centrality. We found that when all cells from all experiments are considered (Figure 6A), there was a weak correlation between looming selectivity of cells and their Katz centrality ($r =$ 0.02, $p_{r} =$ 1e-6, $n=$2487). Correlation coefficients between Katz centrality and looming selectivity were positive in 19/30 experiments (Figure 6B; average $r=$ 0.09$\pm$0.20 $p_{t1}=$ 0.03), and there was no change of this effect in development ($p_t=$ 0.5).
 
 A node may have high Katz centrality for two reasons: it may receive a higher number of incoming connections (higher in-degree), or have chains of directed edges lead to it. To see which of these patterns may be at work here, we checked whether looming-selective cells received more incoming connections, compared to non-selective cells \citep{litwin2014assemblies}. When all points were considered, there was no correlation between in-degree and cell selectivity ($p_{r}=$0.3, $n=$ 2487), but for individual experiments correlation coefficients between in-degree and selectivity were positive in 20/30 of cases (Figure 6C, $p_{t1}=$ 0.03). There was no change of this correlation in development ($p_t=$0.5).
-
-% If necessary, we may add back a statement that they didn't get more projections out, in contradiction with [timme2016degree], which is probably because they would be projecting out of the network, and not in?
 
 As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether selectivity for looming stimuli correlated with cell \textbf{average spiking activity} during our recordings. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity (across all cells $r_S=$ 0.07, $p_r=$ 4e-4; average $r_S =$ 0.34$\pm$0.20 and 0.14$\pm$0.26 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 2e-5 and 0.04), which matches predictions from our earlier studies of intrinsic excitability in the tectum \citep{busch2019}. The size of this correlation decreased in development ($p_t=$ 4e-4). (For this analysis we used Spearman rather than Pearson correlation, as 4 experiments had single neurons with extremely high activity levels that acted as influential points. Excluding these 4 neurons and using Pearson correlation leads to similar results.) 
 
@@ -270,8 +268,6 @@ We then analyzed the quality of stimulus encoding, or whether in our model the i
 Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level (Figure 8F): by the end of the training, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells was 0.48$\pm$0.07 (Figure 8G); and 84\% of cells were selective for looming stimuli (Figure 8H), which was also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Figure 8I).
 
 The position of selective cells within the network was different in the model, compared to biological experiments. While in tadpoles, selective cells tended to be located in the middle of the retinotopic field, in the model they tended to be located on the periphery, and selectivity for looming stimuli positively correlated with the distance from the network center (Figure 8J). Similar to tadpoles, however, this correlation disappeared in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Similarly to biological networks, selective cells tended to be closer to each other (down to 71$\pm$3\% of distance expected for random connections; Figure 8K) than expected by chance, yet unlike for biological networks, this locality of connections was refined in development.
-
-%Even though edges of looming stimuli generally traveled from the center of the field to the periphery, there was no correlation between the weight of a cell-to-cell connection and its orientation away from the network center ($r$=8e-5), which means that connections were equally likely to face outward and inward.
 
 We then looked at topological and functional correlates of looming selectivity in model networks. Selective cells tended to be more spiky ($r$=0.34$\pm$0.12; Figure 8L, red line), and usually were not a part of a cluster (Figure 8M; final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the model selective sells were not special in terms of their Katz centrality ($r$=0.02$\pm$0.13; Figure 8N), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12; Figure 8O). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07; Figure 8P). %In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching our results from biological networks.
 
