Model description: minor edits

--- a/main.tex
+++ b/main.tex
@@ -251,9 +251,9 @@ As our recordings were noisy, and sample sizes relatively small, it was hard to 
 Developmental model. \textbf{A}. Typical adjacency matrix before simulation (random seed). \textbf{B}. Typical adjacency matrix by the end of simulation. \textbf{C}. Vizualization of neuronal connections in space (with cell positions properly represented). \textbf{D}. Same connectivity graph as in C, but rearranged to reveal its structure. \textbf{E}. Evolution of all input weights to one sample cell, over the course of simulation. \textbf{F}. Evolution of spiking threshold for 9 sample cells, over the course of simulation. \textbf{G}. Response amplitudes to three testing stimuli (Flash, Scramble, Looming) for all cells in one simulation. }
 \end{figure*}
 
-We then introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP observed in the tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active one after another in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell immediately after it had spiked. The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average \citep{pratt2007intrinsic,turrigiano2011}. Synaptic competition attempted to keep as close to constant as possible both the sum of synaptic inputs to each neuron, and the sum of outputs from it. In practice, it means that every time a synapse connecting neurons $i$ and $j$ increased in strength, all output synapses of neuron $i$ and all input synapses of nuron $j$ were scaled down \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
+We introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP observed in the tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active one after another in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell immediately after it had spiked. The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average \citep{pratt2007intrinsic,turrigiano2011}. Synaptic competition attempted to keep as close to constant as possible both the sum of synaptic inputs to each neuron, and the sum of outputs from it. In practice, it means that every time a synapse connecting neurons $i$ and $j$ increased in strength, all output synapses of neuron $i$ and all input synapses of nuron $j$ were scaled down \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
 
-With these three developmental rules at play, we exposed the model to patterned sensory stimulation, modeling retinotopic inputs from the eye. We hypothesized that during collision avoidance in real tadpoles, STDP-driven changes in the tectum may be controlled and amplified by a global learning signal \citep{savin2014stdpreward,aswolinskiy2015stdpreward} originating either in dimming receptors in the retina \citep{baranauskas2012}, or form mechanosensory systems of the hindbrain, after unsuccessful collision avoidance \citep{pratt2009multisens,felch2016,truszkowski2017}. To model this assumption, in the main set of simulation experiments we only exposed our model to looming stimuli, as if STDP-driven changes were only implemented during looming responses (but see sensitivity analyses below). The network was allowed to develop for 12500 time steps (at least 500 looming stimuli), and we saved its topology at five equally spaced time points during this process, from a naive network, to the final state. We ran independent simulations 50 times, and for each connectivity snapshot we analyzed its weighted graph, as well as network responses to model visual stimuli that included a looming stimulus, a scrambled stimulus, and a full-field flash (same as in biological experiments).
+With these three developmental rules at play, we exposed the model to patterned sensory stimulation that imitated retinotopic inputs from the eye. We hypothesized that during collision avoidance in real tadpoles, STDP-driven changes in the tectum may be controlled and amplified by a global learning signal that arrives after unsuccessful collision avoidance \citep{savin2014stdpreward,aswolinskiy2015stdpreward}, and originates either in dimming receptors in the retina \citep{baranauskas2012}, or in mechanosensory systems of the hindbrain \citep{pratt2009multisens,felch2016,truszkowski2017}. This hypothesis is known as the eligibility trace model, in which changes in synaptic weights do not happen immediately, but are first "remembered" by each cell as potential changes, and are only implemented in response to a timely reinforcement signal \citep{seung2003trace}. To reflect this assumption, in the main set of simulations we only exposed our model to looming stimuli, as if STDP-driven changes were only implemented during looming responses (but see sensitivity analyses below). The network was allowed to develop for 12500 time steps (at least 500 looming stimuli), and we saved its topology at five equally spaced time points during this process, from a naive network, to the final state. We ran independent simulations 50 times, and for each connectivity snapshot we analyzed its weighted graph, as well as network responses to model visual stimuli that included a looming stimulus, a scrambled stimulus, and a full-field flash (same as in biological experiments).
 
 \begin{figure*}
 \includegraphics[width=\linewidth]{fig8.pdf}
