--- a/refs.bib
+++ b/refs.bib
@@ -185,6 +185,17 @@
   publisher={APS}
 }
 
+@article{seung2003trace,
+  title={Learning in spiking neural networks by reinforcement of stochastic synaptic transmission},
+  author={Seung, H Sebastian},
+  journal={Neuron},
+  volume={40},
+  number={6},
+  pages={1063--1073},
+  year={2003},
+  publisher={Elsevier}
+}
+
 @article{frost2004review,
   title={The biological bases of time-to-collision computation},
   author={Frost, Barrie J and Sun, Hongjin},
